<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="hello">Hello World, topos!</string>
	<string name="app_name">Save my carrots!</string>
	<string name="txtTitleSetting">Sonido</string>
	<string name="textView1">Topos Game</string>
	<string name="btnPlay">Start</string>
	<string name="btnContinue">Continue</string>
	<string name="btnExit">Exit</string>
	<string name="btnRanking">Ranking</string>
	<string name="btnSettings">Settings</string>
	<string name="txtSound">Sound</string>
	<string name="txtFailed">Carrots remaining:</string>
	<string name="points">Points:</string>
	<string name="txtTime">Time</string>
	<string name="txtTitleLevelView">Title</string>
	<string name="txtLevel">Level:</string>
	<string name="txtScore">Score:</string>
	<string name="txtValueScore">0</string>
	<string name="txtAlertDialogFinishedLevel">Finished level</string>
	<string name="txtButtonNextLevel">Next level</string>
	<string name="txtButtonBackSave">Save and return</string>
	<string name="txtButtonBack">Back to main menu</string>
	<string name="txtAlertDialogGameOver">Game Over</string>
	<string name="submitScore">Submit score</string>
	<string name="pref">Settings</string>
	<string name="sl_networkError">Error while submitting score. Please, check your
		internet connection.</string>
	<string name="sl_success">Score submitted. Check the leaderboards!</string>
	<string name="submitting">Submitting score, please wait.</string>
	<string name="txtVibration">Vibration</string>
	<string name="btnCredits">Credits</string>
	<string name="prefTitleKid">Kid Mode</string>
	<string name="prefTitleSound">Sound settings</string>
	<string name="prefTitleMusic">Music</string>
	<string name="prefTitleHit">Hit sound</string>
	<string name="prefTitleMiss">Miss sound</string>
	<string name="prefTitleEnding">Ending sound</string>
	<string name="prefTitleMisc">Misc settings</string>
	<string name="prefTitleVibration">Vibration</string>
	<string name="prefTitleEndingVibration">Ending vibration</string>
	<string name="prefTitleBackground">Background</string>
	<string name="prefSummaryKid">Easier to play. Disables submitting score</string>
	<string name="prefSummaryMusic">Plays music while playing</string>
	<string name="prefSummaryHit">Plays a sound when you hit a mole</string>
	<string name="prefSummaryMiss">Plays a sound when you lose a carrot</string>
	<string name="prefSummaryEnding">Plays a sound to warn of the end of a level</string>
	<string name="prefSummaryVibration">Vibrates when you hit a mole</string>
	<string name="prefSummaryEndingVibration">Vibrates to warn of the end of a level</string>
	<string name="prefSummaryBackground">Change background visibility in game. Disable for performance</string>
	<string name="NO_BORRAR">peta</string>
	


</resources>
