<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:background="@drawable/mainmenubackground">
	<LinearLayout android:orientation="vertical" android:id="@+id/linearLayoutMain"
		android:layout_width="fill_parent" android:layout_height="fill_parent"
		android:layout_weight="0.17">
		<TextView android:layout_width="wrap_content"
			android:textSize="50dip" android:text="@string/app_name" android:id="@+id/textView1"
			android:layout_height="wrap_content" android:layout_gravity="center_horizontal"></TextView>
		<Button android:layout_width="wrap_content" android:text="@string/btnPlay"
			android:id="@+id/btnPlay" android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"></Button>
		<Button android:layout_width="wrap_content" android:text="@string/btnContinue"
			android:id="@+id/btnContinue" android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"></Button>
		<Button android:layout_width="wrap_content" android:text="@string/btnRanking"
			android:id="@+id/btnRanking" android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"></Button>
		<Button android:layout_width="wrap_content" android:text="@+string/pref"
			android:id="@+id/prefButton" android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"></Button>
	</LinearLayout>
	<LinearLayout android:orientation="horizontal" android:id="@+id/linearLayout"
		android:layout_width="fill_parent" android:layout_height="fill_parent"
		android:layout_weight="0.83" android:layout_gravity="left"></LinearLayout>
</LinearLayout>
